--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ nav{
 }
 
 .links{
-    display: flex;
+    /* display: flex; */
     justify-content: space-between;
 }
 
@@ -54,7 +54,6 @@ nav{
 }
 
 .hero-img-section{
-    border: solid 2px yellow;
     width: 50%;
     text-align: right;
     
@@ -72,7 +71,6 @@ nav{
     padding: 10px 10px ;
     display: flex;
     flex-direction: column;
-    border: 1px solid yellow;
     width: 50%;
 }
 
@@ -96,20 +94,84 @@ nav{
     list-style-type: none;
 }
 
-.hero-info ul li a{
-    /* color: #fff; */
-    text-decoration : none;
-    font-size: 2em;
-    margin-right: 100px;
-    border: 1px solide #fff;
+.buttons{
+    display: flex;
 }
 
-.left-btn{
-    color: #fff;
-    /* font-size : 1em; */
-    background-color: #F5167E;
-    padding: 15px 60px;
-    border-radius : 50px;
+.buttons a{
+    text-decoration: none;
 
+}
+
+.buttons .left-btn{
+    background-color: #F5167E ;
+    border: none;
+    border-radius: 50px;
+    font-weight: 600;
+    margin-right: 30px;
+    padding: 10px 35px;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.buttons .right-btn{
+    background-color:transparent ;
+    border: 1px solid #fff;
+    border-radius: 50px;
+    font-weight:600;
+    margin-right: 30px;
+    padding: 10px 35px;
+    text-decoration: none;
+    cursor: pointer;
+}
+.buttons button a{
+    color: #fff;
+    font-size: 0.8em;
+}
+
+/* Search an event section */
+.event-section{
+    display: flex;
+    background-color: #242565;
+    border-radius: 20px;
+    color: #fff;
+    width: 70%;
+    justify-content: space-between;
+    padding: 20px 40px ;
+    align-items: center;
+    margin: -10vh auto auto;
+    height: 10vh;
+    box-shadow: 10px 5px 15px 0px rgba(0, 0, 0, 0.5);
     
+
+}
+
+.search-events, .place, .time{
+    display: flex;
+    flex-direction: column;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+}
+
+form input{
+    
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid #7778B0;
+    color: #fff;
+    outline: none;
+    
+}
+
+form input::placeholder{
+    color: #fff;
+    font-size: 1.5em;
+}
+
+form label{
+    font-size: 0.6em;
+    margin-bottom: 2vh;
 }
