--- a/style.css
+++ b/style.css
@@ -181,7 +181,6 @@ form label{
 
 .main-section{
   width: 75%;
-  /* background-color: #00acee; */
   margin: auto;
   padding: 20px 0px;
 
@@ -227,7 +226,6 @@ form label{
 
 .upcoming-main .first-line, .second-line{
   display: flex;
-  /* background-color: #242565; */
   justify-content: space-between;
 }
 
@@ -375,7 +373,6 @@ footer{
   width: 100%;
   background-color: #0A075F;
   color: #fff;
-  /* height: 50vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -396,8 +393,8 @@ footer .footer-container .about{
   width: 30%;
 }
 
-footer .footer-container .newsletter .mailfield{
-  /* position: absolute; */
+footer .footer-container .about img{
+  margin-left: 10px;
 }
 
 .footer-container .newsletter .mailfield input{
@@ -407,7 +404,6 @@ footer .footer-container .newsletter .mailfield{
   outline: none;
   border-radius: 25px;
   width: 300px;
-
 }
 
 footer .footer-container .newsletter .mailfield button{
@@ -422,25 +418,11 @@ footer .footer-container .newsletter .mailfield button{
   margin: 5px 200px;
   width: 150px;
 }
-/* footer h4{
-  color: #fff; */
 
 .copyright h4{
   color: #fff;
   font-size: 0.9em;
   font-weight: 400;
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 
