--- a/style.css
+++ b/style.css
@@ -11,12 +11,14 @@ header{
     background-image: url(images/hero-bg.png);
     background-repeat: no-repeat;
     background-size: cover;
+    width: 100vw;
 }
 
 nav{
     padding: 40px 20px;
     display: flex;
     justify-content: space-around;
+    width: 100;
 }
 
 .menu{
@@ -658,3 +660,346 @@ border-radius: 0 0 8px 8px;
   line-height: 2;
   font-size: 1.2rem;
 }
+
+
+.header-phone{
+  display: none;
+}
+
+/* pour les tailles des écrants qui ne dépasse pas 900px */
+
+
+@media screen and (max-width: 415px) {
+  body{
+    margin: 0;
+    font-family: 'Roboto';
+}
+.login-section{
+  display: none;
+}
+
+
+.header-phone{
+  display: block;
+}
+.header-phone .navbar{
+  display: flex;
+  height: 100px;
+  background-color: #8F0D4A;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 15px;
+}
+.header-phone .navbar img{
+  height: 40px;
+  width: 140px;
+}
+.header-phone .navbar span{
+  color: #fff;
+  margin-right: 20px;
+  font-size: 3rem;
+}
+/* .header-phone .navbar img{
+  display: flex;
+  height: 100px;
+  background-color: #8F0D4A;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 15px;
+} */
+
+
+/* Header section */
+header{
+    /* background-image: url(images/hero-bg.png); */
+    /* background-repeat: no-repeat; */
+    /* background-size: cover; */
+    display: none;
+}
+
+
+header .logo img{
+  width: 110px;
+  
+}
+.menu .links{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  /* justify-content: space-around; */
+}
+.menu .links ul{
+  /* display: flex; */
+  /* list-style-type: none; */
+  /* margin-right: 60px; */
+}
+.links ul li{
+  margin: 0 50px;
+  font-size: 1.5em;
+}
+
+nav{
+    /* padding: 40px 20px;*/
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+
+.links ul a{
+    text-decoration : none;
+    color : #fff 
+}
+
+.links ul .login-btn{
+    border: 1px solid #fff;
+    border-radius: 20px;
+    padding: 10px 30px;
+}
+
+.hero-section{
+    display: flex;
+    width: 100%;
+    align-items: center;
+}
+
+.hero-img-section{
+    width: 50%;
+    text-align: right;
+    
+}
+
+.hero-img-section img{
+    max-width: 100%;
+}
+
+#shadow{
+    margin-top: -100px;
+}
+
+.hero-info{
+    padding: 10px 10px ;
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+
+.hero-info h2{
+    font-size: 2em;
+    color: #fff;
+    line-height: 1.5em;
+    margin: 0 ;
+}
+
+.hero-info p{
+    margin-top: 10px;
+    margin-bottom: 20px;
+    font-size: 1.8em;
+    font-weight: 100;
+    color: #fff;
+    line-height: 1.5em;
+    padding-right: 10px;
+}
+
+.hero-info ul{
+    list-style-type: none;
+}
+
+.buttons{
+    display: flex;
+}
+
+.buttons a{
+    text-decoration: none;
+
+}
+
+.buttons .left-btn{
+    background-color: #F5167E ;
+    border: none;
+    border-radius: 50px;
+    font-weight: 600;
+    margin-right: 30px;
+    padding: 10px 35px;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.buttons .right-btn{
+    background-color:transparent ;
+    border: 1px solid #fff;
+    border-radius: 50px;
+    font-weight:600;
+    margin-right: 30px;
+    padding: 10px 35px;
+    text-decoration: none;
+    cursor: pointer;
+}
+.buttons button a{
+    color: #fff;
+    font-size: 0.8em;
+}
+
+/* Search an event section */
+.event-section{
+    display: flex;
+    background-color: #242565;
+    border-radius: 20px;
+    color: #fff;
+    width: 70%;
+    justify-content: space-between;
+    padding: 20px 40px ;
+    align-items: center;
+    margin: -10vh auto auto;
+    height: 15vh;
+    box-shadow: 10px 5px 15px 0px rgba(0, 0, 0, 0.5);
+}
+
+.search-events, .place, .time{
+    display: flex;
+    flex-direction: column;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+}
+
+form input{
+    
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid #7778B0;
+    color: #fff;
+    outline: none;
+}
+
+form input::placeholder{
+    color: #fff;
+    font-size: 1.5em;
+}
+
+form label{
+    font-size: 0.8em;
+    margin-bottom: 2vh;
+}
+
+/* footer  */
+footer{
+  width: 100%;
+  background-color: #0A075F;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+footer a{
+  text-decoration: none;
+  color: #fff;
+}
+
+footer .footer-container{
+  display: flex;
+  justify-content: space-between;
+  padding: 10vh 10vh;
+}
+
+footer .footer-container .about{
+  width: 30%;
+}
+
+footer .footer-container .about img{
+  margin-left: 10px;
+}
+
+.footer-container .newsletter .mailfield input{
+  position: absolute;
+  padding: 20px 30px;
+  border: none;
+  outline: none;
+  border-radius: 25px;
+  width: 300px;
+}
+
+footer .footer-container .newsletter .mailfield button{
+  position: absolute;
+  border: none;
+  background-color: #F5167E;
+  color: #fff;
+  padding: 15px 15px;
+  border-radius: 40px;
+  font-weight: 500;
+  font-size: 0.8em;
+  margin: 5px 200px;
+  width: 150px;
+}
+
+.copyright h4{
+  color: #fff;
+  font-size: 0.9em;
+  font-weight: 400;
+}
+
+/* about page */
+
+.container {
+  width: 70%;
+  background-color: #EEE1FF;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0;
+  background-color: #EEE1FF;
+}
+
+.row:last-child {
+  margin-bottom: 0;
+}
+
+.text , .image{
+  width: 50%;
+}
+
+#ticket{
+max-width: 100%;
+height: auto;
+display: block;
+border-radius: 8px 8px 0 0;
+}
+#creators{
+max-width: 100%;
+height: auto;
+display: block;
+}
+#gnawa{
+max-width: 100%;
+height: auto;
+display: block;
+border-radius: 0 0 8px 8px;
+}
+
+.text h2 {
+  margin-bottom: 10px;
+  color: #333;
+  font-family: "Stick No Bills";
+  font-size: 3rem;
+  text-align: center;
+}
+
+.text p {
+  color: #666;
+  line-height: 2;
+  font-size: 1.2rem;
+}
+
+  }
